--- a/demos/generate-model.ipynb
+++ b/demos/generate-model.ipynb
@@ -100,7 +100,7 @@
    "outputs": [],
    "source": [
     "# USER INPUT\n",
-    "size_type = 'charpy-senb-0.5' # 'ct-1t' | 'charpy-senb-0.5' | 'charpy-senb-0.2'\n",
+    "size_type = 'ct-1t'  # 'ct-1t' | 'charpy-senb-0.5' | 'charpy-senb-0.2'\n",
     "fraction = 'quarter'  # quarter | half | full\n"
    ]
   },
@@ -147,13 +147,13 @@
    "source": [
     "mat_list = [\n",
     "# ONLY NEEDED FOR CT\n",
-    "    #     {\n",
-    "#         'name': 'rigid',\n",
-    "#         'elastic': {\n",
-    "#             'youngs_modulus': 2000000,\n",
-    "#             'poisson_ratio': 0.3\n",
-    "#         },\n",
-    "#     },\n",
+    "        {\n",
+    "        'name': 'rigid',\n",
+    "        'elastic': {\n",
+    "            'youngs_modulus': 2000000,\n",
+    "            'poisson_ratio': 0.3\n",
+    "        },\n",
+    "    },\n",
     "    {\n",
     "        'name': specimen_material,\n",
     "        'func_name': specimen_material,\n",
@@ -187,7 +187,7 @@
     "    'element_thickness': element_thickness,\n",
     "}\n",
     "# generate_compact_tension_specimen_parts | generate_bend_bar_specimen_parts\n",
-    "parts = generate_bend_bar_specimen_parts(dimension, mesh_definition,\n",
+    "parts = generate_compact_tension_specimen_parts(dimension, mesh_definition,\n",
     "                     element_type, size_type, fraction, specimen_material)"
    ]
   },
@@ -205,7 +205,7 @@
    "outputs": [],
    "source": [
     "# generate_compact_tension_specimen_steps | generate_threepoint_bend_test_steps\n",
-    "steps_definition = generate_threepoint_bend_test_steps(\n",
+    "steps_definition = generate_compact_tension_specimen_steps(\n",
     "    applied_displacement=applied_disp,\n",
     "    number_contours=num_contours,\n",
     "    time_increment_definition=time_increment_definition,\n",
@@ -226,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_path = './moddel.inp'\n",
+    "out_path = './save-input-data/model.inp'\n",
     "writers.write_inp(out_path, materials, parts, steps_definition)"
    ]
   },
