--- a/demos/generate-model.ipynb
+++ b/demos/generate-model.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# automatically reload when making changes in module files (only needs to be run once)\n",
     "%load_ext autoreload\n",
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +36,26 @@
     "from abaqus_parse.parts import generate_compact_tension_specimen_parts, generate_bend_bar_specimen_parts\n",
     "from abaqus_parse.steps import generate_compact_tension_specimen_steps, generate_threepoint_bend_test_steps\n",
     "from abaqus_parse import writers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'fracture_fea_laf.mesh' from 'c:\\\\users\\\\mbgm9my2\\\\dropbox (research group)\\\\calculations-code\\\\code\\\\matsci-tools\\\\fracture-fea-laf\\\\fracture_fea_laf\\\\mesh.py'>"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mesh"
    ]
   },
   {
